--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@babel/preset-env": "^7.1.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0",
     "npm-run-all": "^4.1.3",
     "rollup": "^0.67.0",
